--- a/publications.html
+++ b/publications.html
@@ -111,6 +111,82 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_iccv2.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Self-Calibrating Neural Radiance Fields</h3>
+		<p>Yoonwoo Jeong, Seokjun Ahn, Christopher Choy, Animashree Anandkumar, Minsu Cho, and <b>Jaesik Park</b><br>
+		International Conference on Computer Vision (<b>ICCV</b>), 2021<br>
+		</p>
+		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_iccv3.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Deep Hough Voting for Robust Global Registration</h3>
+		<p>Junha Lee, Seungwook Kim, Minsu Cho, and <b>Jaesik Park</b><br>
+		International Conference on Computer Vision (<b>ICCV</b>), 2021<br>
+		</p>
+		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_iccv1.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Deep Virtual Markers for Articulated 3D Shapes</h3>
+		<p>Hyomin Kim, Jungeon Kim, Jaewon Kam, <b>Jaesik Park</b>, and Seungyong Lee<br>
+		International Conference on Computer Vision (<b>ICCV</b>), 2021<br>
+		(<b>Oral</b> Presentation, -% acceptance rate)</p>
+		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_icip.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>STAD: Stable Video Depth Estimation</h3>
+		<p>Hyunmin Lee and <b>Jaesik Park</b><br>
+		IEEE International Conference on Image Processing (<b>ICIP</b>), 2021<br>
+		</p>
+		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/21_scientific_reports.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
@@ -118,7 +194,7 @@
 		<p>Taewon Jin, Taesoo Park, Ina Park, <b>Jaesik Park</b>, and Ji Hoon Shim<br>
 		<b>Scientific Reports</b> published by Nature Research, 2021<br>
 		</p>
-		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
+		<a href="https://www.nature.com/articles/s41598-021-84544-8" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 	</div>
@@ -137,7 +213,7 @@
 		<p>Hyomin Kim, Jungeon Kim, Hyeonseo Nam, <b>Jaesik Park</b>, and Seungyong Lee<br>
 		42nd Annual Conference of the European Association for Computer Graphics (<b>EuroGraphics</b>), 2021<br>
 		</p>
-		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
+		<a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/cgf.142652" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 	</div>
