--- a/source/academic_activities.html
+++ b/source/academic_activities.html
@@ -58,6 +58,10 @@
 		<h2> <span class="glyphicon glyphicon-tower"></span>  Awards</h2>
 		<ul class="list-group">
 		<li class="list-group-item">
+			<h4><mark>Representative Research Achievements.</mark></h4>
+			Awarded to ContraGAN project, POSTECH, July 2021.
+		</li>
+		<li class="list-group-item">
 			<h4><mark>Outstanding Online Class</mark></h4>
 			Awarded to five classes among ~170 classes, POSTECH, July 2020.
 		</li>
