--- a/source/about_me.html
+++ b/source/about_me.html
@@ -4,6 +4,11 @@
 			<h2> <span class="glyphicon glyphicon-briefcase"></span>  Work Experience</h2>
 			<ul class="list-group">
 			<li class="list-group-item">
+				<h4>Adjunct Professor - Yonsei University</h4>
+				<span class="glyphicon glyphicon-map-marker"></span> Seoul, Republic of Korea<br>
+				<span class="glyphicon glyphicon-calendar"></span> April 2021 - <kbd>current</kbd>
+			</li>
+			<li class="list-group-item">
 				<h4>Assistant Professor - POSTECH</h4>
 				<span class="glyphicon glyphicon-map-marker"></span> Pohang, Kyungbuk, Republic of Korea<br>
 				<span class="glyphicon glyphicon-calendar"></span> April 2019 - <kbd>current</kbd>
