--- a/source/lab.html
+++ b/source/lab.html
@@ -92,6 +92,21 @@
 	</div>
 </div>
 <div class="container">
+	<div class="col-lg-12 text-left">
+		<h3 class="name"> <span class="glyphicon glyphicon-user"></span> Undergraduate Students (selected)</h3>
+		<div class="col-xs-3 text-center">
+			<h4>Junghyuk Shin</h4>
+			Selected as the best undergraduate research project (최우수 UGRP)<br>
+			2020.07<br>
+		</div>
+		<div class="col-xs-3 text-center">
+			<h4>Seoyeon Kim</h4>
+			Selected as the best research project (과제연구 최우수상) <br>
+			2021.07<br>
+		</div>
+	</div>
+</div>
+<div class="container">
 	<div class="col-lg-6 text-left">
 		<h3 class="name"> <span class="glyphicon glyphicon-blackboard"></span> Teaching</h3>
 		<ul class="list-group">
