--- a/publications.html
+++ b/publications.html
@@ -262,7 +262,7 @@
 		<h3>ContraGAN: Contrastive Learning for Conditional Image Generation</h3>
 		<p>Minguk Kang and <b>Jaesik Park</b><br>
 		Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2020<br>
-		</p>
+		<a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Star</a><a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Fork</a></p>
 		<a href="https://papers.nips.cc/paper/2020/file/f490c742cd8318b8ee6dca10af2a163f-Paper.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
