--- a/lab.html
+++ b/lab.html
@@ -120,14 +120,8 @@
 		<div class="col-xs-3 text-center">
 			<img src="source/images/junha.jpg" class="img-responsive img-circle img-thumbnail">
 			<h4>Junha Lee</h4>
-			2019 Fall<br>
-			Master student<br><br>
-		</div>
-		<div class="col-xs-3 text-center">
-			<img src="source/images/hyunmin.jpg" class="img-responsive img-circle img-thumbnail">
-			<h4>Hyunmin Lee</h4>
-			2019 Fall<br>
-			Master student<br><br>
+			2021 Fall<br>
+			Ph.D. student<br><br>
 		</div>
 		<div class="col-xs-3 text-center">
 			<img src="source/images/jaebong.jpg" class="img-responsive img-circle img-thumbnail">
@@ -176,6 +170,18 @@
 			<h4>Seungjoo Shin</h4>
 			2021 Fall<br>
 			Master student<br><br>
+		</div>
+	</div>
+</div>
+<div class="container">
+	<div class="col-lg-12 text-left">
+		<h3 class="name"> <span class="glyphicon glyphicon-user"></span> Alumni</h3>
+		<div class="col-xs-3 text-center">
+			<img src="source/images/hyunmin.jpg" class="img-responsive img-circle img-thumbnail">
+			<h4>Hyunmin Lee</h4>
+			2021 Spring<br>
+			Master degree<br>
+			LG AI Research<br><br>
 		</div>
 	</div>
 </div>
