--- a/publications.html
+++ b/publications.html
@@ -153,9 +153,9 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Deep Virtual Markers for Articulated 3D Shapes</h3>
-		<p>Hyomin Kim, Jungeon Kim, Jaewon Kam, <b>Jaesik Park</b>, and Seungyong Lee<br>
+		<p>Hyomin Kim, Jungeon Kim, Jaewon Kam, <b>Jaesik Park</b>*, and Seungyong Lee*<br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2021<br>
-		(<b>Oral</b> Presentation, -% acceptance rate)</p>
+		(*Joint corrresponding author. <b>Oral</b> Presentation, -% acceptance rate)</p>
 		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
