--- a/publications.html
+++ b/publications.html
@@ -159,6 +159,9 @@
 		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
+		<a href="https://github.com/T2Kim/DeepVirtualMarkers" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
@@ -177,6 +180,9 @@
 		</p>
 		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="https://github.com/semonemo/STAD" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
 		</a>
 	</div>
 </div>
