adding ICCV papers

--- a/publications.html
+++ b/publications.html
@@ -111,14 +111,33 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/data/21_iccv2.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<img src="publications/data/21_iccv1.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>Self-Calibrating Neural Radiance Fields</h3>
 		<p>Yoonwoo Jeong, Seokjun Ahn, Christopher Choy, Animashree Anandkumar, Minsu Cho, and <b>Jaesik Park</b><br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2021<br>
 		</p>
-		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/21_iccv1.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_iccv2.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Deep Hough Voting for Robust Global Registration</h3>
+		<p>Junha Lee, Seungwook Kim, Minsu Cho, and <b>Jaesik Park</b><br>
+		International Conference on Computer Vision (<b>ICCV</b>), 2021<br>
+		</p>
+		<a href="http://jaesik.info/publications/data/21_iccv2.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 	</div>
@@ -133,30 +152,11 @@
 		<img src="publications/data/21_iccv3.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
-		<h3>Deep Hough Voting for Robust Global Registration</h3>
-		<p>Junha Lee, Seungwook Kim, Minsu Cho, and <b>Jaesik Park</b><br>
-		International Conference on Computer Vision (<b>ICCV</b>), 2021<br>
-		</p>
-		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-file"></span> Paper
-		</a>
-	</div>
-</div>
-<div class="row" style="height: 30px">
-</div>
-</div>
-
-<div class="container">
-<div class="row">
-	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/data/21_iccv1.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-	</div>
-	<div class="col-lg-7">
 		<h3>Deep Virtual Markers for Articulated 3D Shapes</h3>
 		<p>Hyomin Kim, Jungeon Kim, Jaewon Kam, <b>Jaesik Park</b>*, and Seungyong Lee*<br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2021<br>
 		(*Joint corrresponding author. <b>Oral</b> Presentation, -% acceptance rate)</p>
-		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/publications/data/21_iccv3.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 		<a href="https://github.com/T2Kim/DeepVirtualMarkers" target="_blank" class="btn btn-default" role="button">
