update nerf project

--- a/publications.html
+++ b/publications.html
@@ -118,8 +118,14 @@
 		<p>Yoonwoo Jeong, Seokjun Ahn, Christopher Choy, Animashree Anandkumar, Minsu Cho, and <b>Jaesik Park</b><br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2021<br>
 		</p>
+		<a href="https://postech-cvlab.github.io/SCNeRF" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-home"></span> Project Page
+		</a>
 		<a href="http://jaesik.info/publications/data/21_iccv1.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="https://github.com/POSTECH-CVLab/SCNeRF" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
 		</a>
 	</div>
 </div>
