--- a/source/contact.html
+++ b/source/contact.html
@@ -23,7 +23,7 @@
 		<div class="col-lg-4 text-left">
 			<ul class="list-group">
 				<li class="list-group-item">
-					<h3 class="name"> <span class="glyphicon glyphicon-education"></span> To apply lab</h3>
+					<h3 class="name"> <span class="glyphicon glyphicon-education"></span> To apply our lab</h3>
 					1) Please send your CV to me via email.<br>
 					2-1) Fill out <a href="https://forms.gle/xrQLcT1cefHZuaG67" target="_blank">this form</a>.<br>
 					2-2) Apply <a href="https://adm-g.postech.ac.kr/ENG/" target="_blank"> POSTECH graduate school</a>.<br>
