--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						2021.07. Three papers got accepted at <b>ICCV 2021</b>.
+						2021.07. Three papers got accepted to <b>ICCV 2021</b>.
 					</li>
 					<li class="list-group-item">
 						2021.07. ContraGAN project (NeurIPS 2020) is awarded as one of the <b>POSTECH's representative research achievements</b>.
