--- a/publications.html
+++ b/publications.html
@@ -111,6 +111,38 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_neurips1.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Rebooting ACGAN: Auxiliary Classifier GANs with Stable Training</h3>
+		<p>Minguk Kang, Woohyeon Joseph Shim, Minsu Cho, and <b>Jaesik Park</b><br>
+		Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2021<br>
+		</p>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_neurips2.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Brick-by-Brick: Combinatorial Construction with Deep Reinforcement Learning</h3>
+		<p>Hyunsoo Chung, Jungtaek Kim, Boris Knyazev, Jinhwi Lee, Graham W. Taylor, <b>Jaesik Park</b>, and Minsu Cho<br>
+		Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2021<br>
+		</p>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/21_iccv1.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
