--- a/source/lab.html
+++ b/source/lab.html
@@ -117,6 +117,10 @@
 		<h3 class="name"> <span class="glyphicon glyphicon-blackboard"></span> Teaching</h3>
 		<ul class="list-group">
 			<li class="list-group-item">
+				<h4>2021 Fall</h4>
+				[AIGS101] Artifical Intelligence Basis II*<br>
+				[CSED100] Introduction to Computer Science Engineering*<br>
+				[CSED703F] 3D Vision<br>
 				<h4>2021 Spring</h4>
 				[AIGS101] Artifical Intelligence Basis I*<br>
 				[CSED538/AIGS538] Deep learning<br>
@@ -143,21 +147,23 @@
 				- Developing image synthesis approach for challenging scenarios<br>
 				<h4>2021.05-2022.05, Samsung Electronics</h4>
 				- Research on camera localization<br>
-				<h4>2021.03-2021.10, Hyundai Motor Group</h4>
-				- Research on LiDAR data augmentation<br>
-				<h4>2020.06-2021.06, Grant fund, Microsoft Reserach Asia</h4>
-				- Research on content creation<br>				
 				<h4>2020.04-current, Grant fund, Intel Corp., USA</h4>
 				- Research collaboration with Intel ISL<br>
 				- Contribution to Open3D<br>
-				<h4>2020.03-2020.10, ETRI, Republic of Korea</h4>
-				- Developing 3D human capturing system<br>
 				<h4>2020.03-2023.03, Ministry of Science and ICT, Republic of Korea</h4>
 				- 과학기술정보통신부 신진연구자 지원사업 + 신진연구 최초혁신실험실<br>
-				<h4>2019.10-2021.10, Grant fund, Qualcomm Corp., USA</h4>
-				- Research on latent feature refinement<br>
 				<h4>2019.04-2022.04, Grant fund, POSTECH, Republic of Korea</h4>
 				- 포항공과대학교 신임교수 초기정착비<br>
+			</li>
+			<li class="list-group-item">
+				<h4>2019.10-2021.10, Grant fund, Qualcomm Corp., USA</h4>
+				- Research on latent feature refinement<br>
+				<h4>2021.03-2021.09, Hyundai Motor Group</h4>
+				- Research on LiDAR data augmentation<br>				
+				<h4>2020.06-2021.06, Grant fund, Microsoft Reserach Asia</h4>
+				- Research on content creation<br>				
+				<h4>2020.03-2020.10, ETRI, Republic of Korea</h4>
+				- Developing 3D human capturing system<br>
 			</li>
 		</ul>
 	</div>
