--- a/publications.html
+++ b/publications.html
@@ -111,6 +111,22 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_tog.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>TextureMe: High-quality Textured Scene Reconstruction in Real-time</h3>
+		<p>Jungeon Kim, Hyomin Kim, Hyeonseo Nam, <b>Jaesik Park</b>, and Seungyong Lee<br>
+		ACM Transactions on Graphics (<b>ToG</b>), 2021<br>
+		</p>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/21_neurips1.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
