--- a/publications.html
+++ b/publications.html
@@ -209,7 +209,7 @@
 		<h3>Deep Virtual Markers for Articulated 3D Shapes</h3>
 		<p>Hyomin Kim, Jungeon Kim, Jaewon Kam, <b>Jaesik Park</b>*, and Seungyong Lee*<br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2021<br>
-		(*Joint corrresponding author. <b>Oral</b> Presentation, -% acceptance rate)</p>
+		(*Joint corrresponding author, <b>Oral</b> Presentation, -% acceptance rate)</p>
 		<a href="http://jaesik.info/publications/data/21_iccv3.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
@@ -251,9 +251,9 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Accelerated Crystal Structure Prediction of Multi-elements Random Alloy using Expandable Features</h3>
-		<p>Taewon Jin, Taesoo Park, Ina Park, <b>Jaesik Park</b>, and Ji Hoon Shim<br>
+		<p>Taewon Jin, Taesoo Park, Ina Park, <b>Jaesik Park</b>*, and Ji Hoon Shim*<br>
 		<b>Scientific Reports</b> published by Nature Research, 2021<br>
-		</p>
+		(*Joint corrresponding author)</p>
 		<a href="https://www.nature.com/articles/s41598-021-84544-8" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
