--- a/publications.html
+++ b/publications.html
@@ -111,6 +111,22 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_bmvc.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Self-Supervised Real-time Video Stabilization</h3>
+		<p>Jinsoo Choi, <b>Jaesik Park</b>, and In So Kweon<br>
+		The British Machine Vision Conference (<b>BMVC</b>), 2021<br>
+		</p>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/21_tog.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
