--- a/source/academic_activities.html
+++ b/source/academic_activities.html
@@ -58,7 +58,11 @@
 		<h2> <span class="glyphicon glyphicon-tower"></span>  Awards</h2>
 		<ul class="list-group">
 		<li class="list-group-item">
-			<h4><mark>Representative Research Achievements.</mark></h4>
+			<h4><mark>Best EduTech Class</mark></h4>
+			Awarded to outstanding online class, POSTECH, Nov. 2021.
+		</li>
+		<li class="list-group-item">
+			<h4><mark>Representative Research Achievements</mark></h4>
 			Awarded to ContraGAN project, POSTECH, July 2021.
 		</li>
 		<li class="list-group-item">
