--- a/lab.html
+++ b/lab.html
@@ -211,7 +211,7 @@
 				[CSED703F] 3D Vision<br>
 				<h4>2021 Spring</h4>
 				[AIGS101] Artifical Intelligence Basis I*<br>
-				[CSED538/AIGS538] Deep learning<br>
+				[CSED538/AIGS538] Deep learning - <mark>Awarded as the best EduTech class by POSTECH</mark><br>
 				<h4>2020 Fall</h4>
 				[AIGS101] Artifical Intelligence Basis II*<br>
 				[CSED100] Introduction to Computer Science Engineering*<br>
