--- a/publications.html
+++ b/publications.html
@@ -854,7 +854,7 @@
 		<h3>Vision System and Depth Processing for DRC-HUBO+</h3>
 		<p>Inwook Shim, Seunghak Shin, Yunsu Bok, Kyungdon Joo, Dong-Geol Choi, Joon-Young Lee, <b>Jaesik Park</b>, Jun Ho Oh, and In So Kweon<br>
 		IEEE International Conference on Robotics and Automation (<b>ICRA</b>), 2016<br>
-		Depth processing algorithm of Team KAIST (winner of DARPA robotics challenge finals 2015)		       </p>
+		(Depth processing algorithm of Team KAIST (winner of DARPA robotics challenge finals 2015))		       </p>
 		<a href="https://sites.google.com/site/iwshimcv/drc-finals-2015" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
@@ -882,7 +882,7 @@
 		<h3>Multi-view Object Extraction with Fractional Boundaries</h3>
 		<p>Seong-Heum Kim, Yu-Wing Tai, <b>Jaesik Park</b>, and In So Kweon<br>
 		IEEE Transaction on Image Processing (<b>TIP</b>), 2016<br>
-		Depth processing algorithm of Team KAIST (winner of DARPA robotics challenge finals 2015)		       </p>
+				       </p>
 		<a href="http://jaesik.info/publications/data/16_tip.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
@@ -1048,7 +1048,7 @@
 		<h3>Exploiting Shading Cues in Kinect IR Images for Geometry Refinement</h3>
 		<p>Gyeongmin Choe*, <b>Jaesik Park</b>*, Yu-Wing Tai, and In So Kweon<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2014<br>
-		*Equal contributions. Received 20th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp.		       </p>
+		(*Equal contributions. Received 20th <b>HumanTech Paper Award (Silver Prize)</b>, Samsung Electronics Corp.)		       </p>
 		<a href="https://sites.google.com/site/gmchoe1/kinir" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
@@ -1095,7 +1095,7 @@
 		<h3>Multiview Photometric Stereo using Planar Mesh Parameterization</h3>
 		<p><b>Jaesik Park</b>, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon<br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2013<br>
-		Received 19th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp.		       </p>
+		(Received 19th <b>HumanTech Paper Award (Silver Prize)</b>, Samsung Electronics Corp.)		       </p>
 		<a href="http://jaesik.info/publications/multiviewps/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
@@ -1220,7 +1220,7 @@
 		<h3>High Quality Depth Map Upsampling for 3D-TOF Cameras</h3>
 		<p><b>Jaesik Park</b>*, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown, and In-So Kweon<br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2011<br>
-		*Equal contributions		       </p>
+		(*Equal contributions)		       </p>
 		<a href="http://jaesik.info/publications/depthups/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
