--- a/publications.html
+++ b/publications.html
@@ -149,7 +149,13 @@
 		<h3>Rebooting ACGAN: Auxiliary Classifier GANs with Stable Training</h3>
 		<p>Minguk Kang, Woohyeon Joseph Shim, Minsu Cho, and <b>Jaesik Park</b><br>
 		Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2021<br>
-				       </p>
+				<a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Star</a><a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Fork</a>       </p>
+		<a href="https://arxiv.org/abs/2111.01118" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
@@ -338,7 +344,7 @@
 		<h3>ContraGAN: Contrastive Learning for Conditional Image Generation</h3>
 		<p>Minguk Kang and <b>Jaesik Park</b><br>
 		Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2020<br>
-				<a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Star</a><a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Fork</a>       </p>
+				       </p>
 		<a href="https://papers.nips.cc/paper/2020/file/f490c742cd8318b8ee6dca10af2a163f-Paper.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
