--- a/publications.html
+++ b/publications.html
@@ -147,7 +147,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Rebooting ACGAN: Auxiliary Classifier GANs with Stable Training</h3>
-		<p>Minguk Kang, Woohyeon Joseph Shim, Minsu Cho, and <b>Jaesik Park</b><br>
+		<p>Minguk Kang, Woohyeon Shim, Minsu Cho, and <b>Jaesik Park</b><br>
 		Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2021<br>
 				<a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Star</a><a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Fork</a>       </p>
 		<a href="https://arxiv.org/abs/2111.01118" target="_blank" class="btn btn-default" role="button">
