--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
+						2021.11. We are releasing the source code of <b>ReACGAN</b> as a submodule of <a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN">StudioGAN</a>.
+					</li>
+					<li class="list-group-item">
 						2021.10. A paper about real-time video stablization is accepted to <b>BMVC 2021</b>.
 					</li>
 					<li class="list-group-item">
