--- a/publications.html
+++ b/publications.html
@@ -187,7 +187,7 @@
 		<h3>Self-Calibrating Neural Radiance Fields</h3>
 		<p>Yoonwoo Jeong, Seokjun Ahn, Christopher Choy, Animashree Anandkumar, Minsu Cho, and <b>Jaesik Park</b><br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2021<br>
-				       </p>
+				<a class="github-button" href="https://github.com/POSTECH-CVLab/SCNeRF" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star POSTECH-CVLab/SCNeRF on GitHub">Star</a><a class="github-button" href="https://github.com/POSTECH-CVLab/SCNeRF/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork POSTECH-CVLab/SCNeRF on GitHub">Fork</a>       </p>
 		<a href="https://postech-cvlab.github.io/SCNeRF" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
