update open3d links

--- a/publications.html
+++ b/publications.html
@@ -614,10 +614,10 @@
 		<a href="http://www.open3d.org/paper.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
-		<a href="https://www.youtube.com/watch?v=qEweHTSEXTk" target="_blank" class="btn btn-default" role="button">
+		<a href="https://www.youtube.com/channel/UCRJBlASPfPBtPXJSPffJV-w" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-play"></span> Video
 		</a>
-		<a href="https://github.com/IntelVCL/Open3D" target="_blank" class="btn btn-default" role="button">
+		<a href="https://github.com/isl-org/Open3D" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-pencil"></span> Code
 		</a>
 		<a href="http://open3d.org/docs" target="_blank" class="btn btn-default" role="button">
