--- a/lab.html
+++ b/lab.html
@@ -171,6 +171,18 @@
 			2021 Fall<br>
 			Master student<br><br>
 		</div>
+		<div class="col-xs-3 text-center">
+			<img src="source/images/dongmin.jpg" class="img-responsive img-circle img-thumbnail">
+			<h4>Dongmin You</h4>
+			2022 Spring<br>
+			Master student<br><br>
+		</div>
+		<div class="col-xs-3 text-center">
+			<img src="source/images/seunguk.jpg" class="img-responsive img-circle img-thumbnail">
+			<h4>Seunguk Do</h4>
+			2022 Spring<br>
+			Master student<br><br>
+		</div>
 	</div>
 </div>
 <div class="container">
