adding paper links

--- a/publications.html
+++ b/publications.html
@@ -118,6 +118,9 @@
 		<p>Jinsoo Choi, <b>Jaesik Park</b>, and In So Kweon<br>
 		The British Machine Vision Conference (<b>BMVC</b>), 2021<br>
 				       </p>
+		<a href="https://arxiv.org/abs/2111.05980" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
@@ -172,6 +175,9 @@
 		<p>Hyunsoo Chung, Jungtaek Kim, Boris Knyazev, Jinhwi Lee, Graham W. Taylor, <b>Jaesik Park</b>, and Minsu Cho<br>
 		Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2021<br>
 				       </p>
+		<a href="https://arxiv.org/abs/2110.15481" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
