--- a/publications.html
+++ b/publications.html
@@ -219,8 +219,17 @@
 		<p>Junha Lee, Seungwook Kim, Minsu Cho, and <b>Jaesik Park</b><br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2021<br>
 				       </p>
+		<a href="http://cvlab.postech.ac.kr/research/DHVR/" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-home"></span> Project Page
+		</a>
 		<a href="http://jaesik.info/publications/data/21_iccv2.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="https://arxiv.org/abs/2109.04310" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
+		</a>
+		<a href="https://github.com/POSTECH-CVLab/DHVR" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
 		</a>
 	</div>
 </div>
@@ -444,6 +453,9 @@
 		</a>
 		<a href="http://jaesik.info/publications/data/20_cvpr_highconv_supp.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
+		</a>
+		<a href="https://github.com/chrischoy/HighDimConvNets" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
 		</a>
 	</div>
 </div>
