new arXiv papers

--- a/publications.html
+++ b/publications.html
@@ -111,6 +111,63 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_arxiv2.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Instance-wise Occlusion and Depth Orders in Natural Scenes</h3>
+		<p>Hyunmin Lee and <b>Jaesik Park</b><br>
+		arXiv:2111.14562, 2021<br>
+				       </p>
+		<a href="https://arxiv.org/pdf/2111.14562.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_arxiv3.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>PointMixer: MLP-Mixer for Point Cloud Understanding</h3>
+		<p>Jaesung Choe*, Chunghyun Park*, Francois Rameau, <b>Jaesik Park</b>, and In So Kweon<br>
+		arXiv:2111.11187, 2021<br>
+		(*Equal contribution)		       </p>
+		<a href="https://arxiv.org/pdf/2111.11187.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_arxiv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Deep Point Cloud Reconstruction</h3>
+		<p>Jaesung Choe, Byeongin Joung, Francois Rameau, <b>Jaesik Park</b>, and In So Kweon<br>
+		arXiv:2111.11704, 2021<br>
+				       </p>
+		<a href="https://arxiv.org/pdf/2111.11704.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/21_bmvc.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
