adding more arxiv papers & announcing new open3d release

--- a/publications.html
+++ b/publications.html
@@ -118,7 +118,45 @@
 		<p>Hyunmin Lee and <b>Jaesik Park</b><br>
 		arXiv:2111.14562, 2021<br>
 				       </p>
-		<a href="https://arxiv.org/pdf/2111.14562.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="https://arxiv.org/abs/2111.14562" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_arxiv4.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Fast Point Transformer</h3>
+		<p>Chunghyun Park, Yoonwoo Jeong, Minsu Cho, and <b>Jaesik Park</b><br>
+		arXiv:TBA, 2021<br>
+				       </p>
+		<a href="http://jaesik.info/" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_arxiv5.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Putting 3D Spatially Sparse Networks on a Diet</h3>
+		<p>Junha Lee, Christopher Choy, and <b>Jaesik Park</b><br>
+		arXiv:2112.01316, 2021<br>
+				       </p>
+		<a href="https://arxiv.org/abs/2112.01316" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 	</div>
@@ -137,7 +175,7 @@
 		<p>Jaesung Choe*, Chunghyun Park*, Francois Rameau, <b>Jaesik Park</b>, and In So Kweon<br>
 		arXiv:2111.11187, 2021<br>
 		(*Equal contribution)		       </p>
-		<a href="https://arxiv.org/pdf/2111.11187.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="https://arxiv.org/abs/2111.11187" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 	</div>
@@ -156,7 +194,26 @@
 		<p>Jaesung Choe, Byeongin Joung, Francois Rameau, <b>Jaesik Park</b>, and In So Kweon<br>
 		arXiv:2111.11704, 2021<br>
 				       </p>
-		<a href="https://arxiv.org/pdf/2111.11704.pdf" target="_blank" class="btn btn-default" role="button">
+		<a href="https://arxiv.org/abs/2111.11704" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_arxiv6.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Real-time Registration and Reconstruction with Cylindrical LiDAR Images</h3>
+		<p>Wei Dong*, Kwonyoung Ryu*, Michael Kaess, and <b>Jaesik Park</b><br>
+		arXiv:TBA, 2021<br>
+				       </p>
+		<a href="http://jaesik.info/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 	</div>
@@ -326,7 +383,7 @@
 		<p>Hyunmin Lee and <b>Jaesik Park</b><br>
 		IEEE International Conference on Image Processing (<b>ICIP</b>), 2021<br>
 				       </p>
-		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
+		<a href="https://ieeexplore.ieee.org/document/9506521" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 		<a href="https://github.com/semonemo/STAD" target="_blank" class="btn btn-default" role="button">
