--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
+						2021.12. <b><a href="https://github.com/isl-org/Open3D/releases/tag/v0.14.1">Open3D 0.14 release</a></b>: new Tensorboard integration, advanced visualization, and decent 3D deep learning models!
+					</li>
+					<li class="list-group-item">
 						2021.11. We are releasing the source code of <b>ReACGAN</b> as a submodule of <a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN">StudioGAN</a>.
 					</li>
 					<li class="list-group-item">
