--- a/source/html/contact.html
+++ b/source/html/contact.html
@@ -1,8 +1,8 @@
 <!-- Source -->
 <div class="container">
 	<br>
-	<div class="col-lg-12 text-left">
-		<div class="col-lg-4 text-left">
+	<div class="row gx-4 gy-4">
+		<div class="col-lg-4 test-start">
 			<ul class="list-group">
 				<li class="list-group-item">
 					<h3 class="name"> <span class="glyphicon glyphicon-envelope"></span> Email</h3>
@@ -10,17 +10,17 @@
 				</li>
 			</ul>
 		</div>
-		<div class="col-lg-4 text-left">
+		<div class="col-lg-4 test-start">
 			<ul class="list-group">
 				<li class="list-group-item">
 					<h3 class="name"> <span class="glyphicon glyphicon-user"></span> To schedule a meeting</h3>
-                    1) Please send me an email.<br>
-                    2) If the request is valid, I will provide a link that shows the available meeting slots.<br>
-                    3) Select the best niche and confirm it.<br>
+					1) Please send me an email.<br>
+					2) If the request is valid, I will provide a link that shows the available meeting slots.<br>
+					3) Select the best niche and confirm it.<br>
 				</li>
 			</ul>
 		</div>
-		<div class="col-lg-4 text-left">
+		<div class="col-lg-4 test-start">
 			<ul class="list-group">
 				<li class="list-group-item">
 					<h3 class="name"> <span class="glyphicon glyphicon-education"></span> To apply our lab</h3>
@@ -31,7 +31,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="col-lg-12 text-left">
+		<div class="col-12 test-start">
 			<ul class="list-group">
 				<li class="list-group-item">
 					<h3 class="name"> <span class="glyphicon glyphicon-map-marker"></span> Office</h3>
