--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
     <title>Jaesik Park</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="http://jaesik.info/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/bootstrap.min.css" rel="stylesheet"> -->
+
+    <!-- Freerancer Core CSS -->
+    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet"> -->
 
     <!-- Custom CSS -->
-    <link href="http://jaesik.info/css/mystyle.css" rel="stylesheet">
+    <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet">
+
+    <!-- Font Awesome icons (free version)-->
+    <!-- <script src="/Users/jaesik/Research/syncle.github.io/js/all.js" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script> -->
 
     <!-- Custom Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,54 +39,36 @@
 </head>
 
 <body id="page-top" class="index">
-
-<!-- Navigation -->
-<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
+<nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
 	<div class="container">
-		<!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header page-scroll">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-				<span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-			</button>
-			<a class="navbar-brand" href="http://jaesik.info">Jaesik Park</a>
-		</div>
-		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav navbar-right">
-				<li class="hidden">
-					<a href="http://jaesik.info"></a>
-				</li>
-				<li >
-					<a href="http://jaesik.info/about_me">About me</a>
-				</li>
-				<li >
-					<a href="http://jaesik.info/academic_activities">Academic activities</a>
-				</li>
-				<li >
-					<a href="http://jaesik.info/publications">Publications</a>
-				</li>
-				<li >
-					<a href="http://jaesik.info/lab">@POSTECH</a>
-				</li>
-				<li >
-					<a href="http://jaesik.info/contact">Contact</a>
-				</li>
+		<a class="navbar-brand" href="http://jaesik.info">Jaesik Park</a>
+		<button class="navbar-toggler font-weight-bold bg-primary text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+			Menu
+			<i class="fas fa-bars"></i>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarResponsive">
+			<ul class="navbar-nav ms-auto">
+				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3" href="http://jaesik.info"></a></li>
+				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="http://jaesik.info/about_me">About me</a></li>
+				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="http://jaesik.info/academic_activities">Academic activities</a></li>
+				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="http://jaesik.info/publications">Publications</a></li>
+				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="http://jaesik.info/lab">@POSTECH</a></li>
+				<li class="nav-item mx-0 mx-lg-1"><a class="nav-link  py-3 px-0 px-lg-3" href="http://jaesik.info/contact">Contact</a></li>
 			</ul>
 		</div>
-		<!-- /.navbar-collapse -->
 	</div>
-<!-- /.container-fluid -->
 </nav>
 
 
 <!-- Source -->
 <div class="container">
-	<div class="well">
-		<div class="row">
-			<div class="col-lg-12 text-left">
-					<h1 class="name"><br></h1>
+	<!-- <div class="well"> -->
+		<div class="row gx-4 gy-4">
+			<div class="col-lg-12 test-start">
+				<h1 class="name"><br></h1>
+			</div>
 			<div class="col-lg-3">
-					<img src="source/images/jaesik-park.jpg" class="img-responsive img-circle img-thumbnail">
+				<img src="source/images/jaesik-park.jpg" class="rounded-circle img-thumbnail">
 			</div>
 			<div class="col-lg-9">
 				<h1>Jaesik Park</h1>
@@ -219,9 +208,9 @@
 						</div>
 					</div>
 				</ul>
-			</div>
+			</div> 
 		</div>
-	</div>
+	<!-- </div> -->
 </div>
 <!-- Footer -->
 <footer>
@@ -236,17 +225,8 @@
 		</div>
 </footer>
 
-<!-- jQuery -->
-<script src="http://jaesik.info/js/jquery.js"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="http://jaesik.info/js/bootstrap.min.js"></script>
-
-<!-- Plugin JavaScript for Navbar -->
-<script src="http://jaesik.info/js/jquery.easing.min.js"></script>
-
 <!-- Theme JavaScript for Navbar -->
-<script src="http://jaesik.info/js/freelancer.js"></script>
+<script src="/Users/jaesik/Research/syncle.github.io/js/scripts.js"></script>
 
 </body>
 
