--- a/publications/depthups/index.html
+++ b/publications/depthups/index.html
@@ -14,13 +14,20 @@
     <title>Jaesik Park</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="http://jaesik.info/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/bootstrap.min.css" rel="stylesheet"> -->
+
+    <!-- Freerancer Core CSS -->
+    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet"> -->
 
     <!-- Custom CSS -->
-    <link href="http://jaesik.info/css/mystyle.css" rel="stylesheet">
+    <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet">
+
+    <!-- Font Awesome icons (free version)-->
+    <!-- <script src="/Users/jaesik/Research/syncle.github.io/js/all.js" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script> -->
 
     <!-- Custom Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -152,17 +159,8 @@
 		</div>
 </footer>
 
-<!-- jQuery -->
-<script src="http://jaesik.info/js/jquery.js"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="http://jaesik.info/js/bootstrap.min.js"></script>
-
-<!-- Plugin JavaScript for Navbar -->
-<script src="http://jaesik.info/js/jquery.easing.min.js"></script>
-
 <!-- Theme JavaScript for Navbar -->
-<script src="http://jaesik.info/js/freelancer.js"></script>
+<script src="/Users/jaesik/Research/syncle.github.io/js/scripts.js"></script>
 
 </body>
 
