--- a/source/html/header.html
+++ b/source/html/header.html
@@ -14,13 +14,20 @@
     <title>Jaesik Park</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="http://jaesik.info/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/bootstrap.min.css" rel="stylesheet"> -->
+
+    <!-- Freerancer Core CSS -->
+    <!-- <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet"> -->
 
     <!-- Custom CSS -->
-    <link href="http://jaesik.info/css/mystyle.css" rel="stylesheet">
+    <link href="/Users/jaesik/Research/syncle.github.io/css/styles.css" rel="stylesheet">
+
+    <!-- Font Awesome icons (free version)-->
+    <!-- <script src="/Users/jaesik/Research/syncle.github.io/js/all.js" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script> -->
 
     <!-- Custom Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
