--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1,11 +1,12 @@
 <!-- Source -->
 <div class="container">
-	<div class="well">
-		<div class="row">
-			<div class="col-lg-12 text-left">
-					<h1 class="name"><br></h1>
+	<!-- <div class="well"> -->
+		<div class="row gx-4 gy-4">
+			<div class="col-lg-12 test-start">
+				<h1 class="name"><br></h1>
+			</div>
 			<div class="col-lg-3">
-					<img src="source/images/jaesik-park.jpg" class="img-responsive img-circle img-thumbnail">
+				<img src="source/images/jaesik-park.jpg" class="rounded-circle img-thumbnail">
 			</div>
 			<div class="col-lg-9">
 				<h1>Jaesik Park</h1>
@@ -145,7 +146,7 @@
 						</div>
 					</div>
 				</ul>
-			</div>
+			</div> 
 		</div>
-	</div>
+	<!-- </div> -->
 </div>
